--- a/Home.html
+++ b/Home.html
@@ -165,6 +165,12 @@
 
 <body>
     <header>
+	    <img src="https://media.istockphoto.com/vectors/hand-holding-torch-vector-id165072006" class="weblogo"
+			width="121px" alt="LOGO">
+
+		<div id="heading">
+			<h1><u>Welcome To My First Website</u></h1>
+		</div>
         <div id="heading">
             <h1><u>Welcome To My First Website </u></h1>
         </div>
