--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 		<nav id="navbar">
 			<ul>
 
-				<li><a href="https://vishu1524.github.io/home/" target="_black">Home</a></li>
+				<li><a href="https://vishu1524.github.io/Home/" target="_black">Home</a></li>
 				<li><a href="https://www.freecodecamp.org/news/html-css-and-javascript-explained-for-beginners/"
 						target="_blank">About</a></li>
 				<li> <a href="#">Help</a></li>
