--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 				<li><a href="https://www.freecodecamp.org/news/html-css-and-javascript-explained-for-beginners/"
 						target="_blank">About</a></li>
 				<li> <a href="#">Help</a></li>
-				<li><a href="https://vishu1524.github.io/Contact/" target="_blank">Contact</a></li>
+				<li><a href="#" target="_blank">Contact</a></li>
 				<div class="search">
 					<input type="text" name="search" placeholder="search box">
 				</div>
