--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
 				<li><a href="#">Home</a></li>
 				<li><a href="https://www.freecodecamp.org/news/html-css-and-javascript-explained-for-beginners/"
-						target="_blank">About</a></li>
+						>About</a></li>
 				<li> <a href="#">Help</a></li>
 				<li><a href="#">Contact</a></li>
 				<div id="google_translate_element"></div>
