--- a/index.html
+++ b/index.html
@@ -224,11 +224,11 @@
 		<nav id="navbar">
 			<ul>
 
-				<li><a href="#">Home</a></li>
+				<li><a href="https://vishu1524.github.io/Home/">Home</a></li>
 				<li><a href="https://www.freecodecamp.org/news/html-css-and-javascript-explained-for-beginners/"
 						>About</a></li>
 				<li> <a href="#">Help</a></li>
-				<li><a href="#">Contact</a></li>
+				<li><a href="https://vishu1524.github.io/phone/">Contact</a></li>
 				<div id="google_translate_element"></div>
 
 				<script type="text/javascript">
