--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
 			<b>6.</b>
 			<div id="table">
 				<hr style="border:black">
-				<a href="/table.html" target="_main" class="img"><img
+				<a href="https://vishu1524.github.io/Result/" target="_main" class="img"><img
 						src="https://bteup.ac.in/InstituteContent/999/Content/images/leftLogo.jpg" width="121px"
 						alt="bteup-result"></a>
 				<div class="RESULTname">
