--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
 
 		<div class="image">
-			<img src="https://scontent.fagr1-2.fna.fbcdn.net/v/t39.30808-6/311266973_133647156085431_3290951804261773713_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=174925&_nc_ohc=UBz340RSEvsAX8EzlQt&_nc_ht=scontent.fagr1-2.fna&oh=00_AT_A6IL5Y_ByUi_WoJH7cQJst6Lq6mq7bWbrgfZr8QxO6g&oe=63526FA7"
+			<img src="https://scontent.fagr1-3.fna.fbcdn.net/v/t39.30808-6/295621362_113061884810625_7486972948430136011_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=R_qXr4OCuO4AX9FH19b&_nc_ht=scontent.fagr1-3.fna&oh=00_AfCNVt-vaA3jJ4ePZevo_5UnETVJo8-Fe8Lr4MB9osixng&oe=639CCB2E"
 				width="121px" alt="image"></a>
 		</div>
 		<h4><u>VISHESH YADAV</u></h4>
@@ -224,11 +224,11 @@
 		<nav id="navbar">
 			<ul>
 
-				<li><a href="https://vishu1524.github.io/Home/">Home</a></li>
+				<li><a href="#">Home</a></li>
 				<li><a href="https://www.freecodecamp.org/news/html-css-and-javascript-explained-for-beginners/"
-						>About</a></li>
+						target="_blank">About</a></li>
 				<li> <a href="#">Help</a></li>
-				<li><a href="https://vishu1524.github.io/phone/">Contact</a></li>
+				<li><a href="#">Contact</a></li>
 				<div id="google_translate_element"></div>
 
 				<script type="text/javascript">
@@ -409,7 +409,7 @@
 			<b>6.</b>
 			<div id="table">
 				<hr style="border:black">
-				<a href="https://vishu1524.github.io/Result/" target="_main" class="img"><img
+				<a href="/table.html" target="_main" class="img"><img
 						src="https://bteup.ac.in/InstituteContent/999/Content/images/leftLogo.jpg" width="121px"
 						alt="bteup-result"></a>
 				<div class="RESULTname">
