--- a/index.html
+++ b/index.html
@@ -221,14 +221,15 @@
 		<h4><u>VISHESH YADAV</u></h4>
 
 
+		
 		<nav id="navbar">
 			<ul>
 
-				<li><a href="#">Home</a></li>
+				<li><a href="https://vishu1524.github.io/Home">Home</a></li>
 				<li><a href="https://www.freecodecamp.org/news/html-css-and-javascript-explained-for-beginners/"
 						target="_blank">About</a></li>
 				<li> <a href="#">Help</a></li>
-				<li><a href="#">Contact</a></li>
+				<li><a href="https://vishu1524.github.io/phone">Contact</a></li>
 				<div id="google_translate_element"></div>
 
 				<script type="text/javascript">
@@ -409,7 +410,7 @@
 			<b>6.</b>
 			<div id="table">
 				<hr style="border:black">
-				<a href="/table.html" target="_main" class="img"><img
+				<a href="https://vishu1524.github.io/result" target="_main" class="img"><img
 						src="https://bteup.ac.in/InstituteContent/999/Content/images/leftLogo.jpg" width="121px"
 						alt="bteup-result"></a>
 				<div class="RESULTname">
